--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.2.1",
-        "vite": "^5.4.1"
+        "vite": "^5.4.1",
+        "terser": "^5.31.0"
     }
 }
